<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Добавить заметку</string>
    <string name="hint_title">Заголовок заметки:</string>
    <string name="hint_description">Описание заметки</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="warning_fill_fileds">Все поля должны быть заполнены</string>
    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>