<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/hint_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Spinner
        android:id="@+id/spinnerDaysOfWeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/days_of_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDaysOfWeek">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:padding="8dp"
            android:text="@string/_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:padding="8dp"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:padding="8dp"
            android:checked="true"
            android:text="@string/_3" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSaveNote"
        android:text="@string/add_note"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority" />
</androidx.constraintlayout.widget.ConstraintLayout>